Fix overlay on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -284,6 +284,7 @@ a:hover, a:focus, a:active {
     top: 60px;
     right: 45px;
     font-size: 60px;
+	z-index: 999;
 }
 
 .overlay .closebtn:hover {
@@ -303,6 +304,10 @@ a:hover, a:focus, a:active {
 	padding-top: 20px;
 }
 
+.overlay-content h3 {
+	font-weight: 100;
+}
+
 @media (max-width: 992px) {
 	.overlay img {
 		float: none;
@@ -311,11 +316,21 @@ a:hover, a:focus, a:active {
 		width: 100%;
 		height: 100%;
 	}
+	.overlay-content h3 {
+		font-size: 1.5em;
+	}
+	.overlay-content h1 {
+		font-size: 2em;
+		padding-right: 50px;
+	}
+	.overlay .closebtn {
+		top: 80px;
+	}
 }
 
 /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
 @media screen and (max-height: 450px) {
-    .overlay a {font-size: 20px}
+    .overlay-content h1 h3 {font-size: 2em}
     .overlay .closebtn {
         font-size: 40px;
         top: 15px;
